GNOME Bugzilla – Bug 706962
MetaWayland: install an X io error handler
Last modified: 2013-08-28 15:22:22 UTC
This way can detect X disconnections correctly, crash with a core dump and reset the tty.
Created attachment 253360 [details] [review] MetaWayland: install an X io error handler
Review of attachment 253360 [details] [review]: Makes sense.
Attachment 253360 [details] pushed as 0ccedda - MetaWayland: install an X io error handler